@@ -1,0 +1,12 @@
+include COPYING README NEWS TODO ChangeLog
+
+include cupsconnection.[ch]
+include cupsipp.[ch]
+include cupsmodule.[ch]
+include cupsppd.[ch]
+include setup.py
+
+include test.py examples/cupstree.py
+
+# RPM bits
+include postscriptdriver.prov psdriver.attr
