@@ -1,3 +1,38 @@
+#!/usr/bin/python
+
+## Copyright (C) 2002, 2005, 2006, 2007, 2008, 2009, 2010, 2011  Red Hat, Inc
+##  Author: Tim Waugh <twaugh@redhat.com>
+
+## This program is free software; you can redistribute it and/or modify
+## it under the terms of the GNU General Public License as published by
+## the Free Software Foundation; either version 2 of the License, or
+## (at your option) any later version.
+
+## This program is distributed in the hope that it will be useful,
+## but WITHOUT ANY WARRANTY; without even the implied warranty of
+## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+## GNU General Public License for more details.
+
+## You should have received a copy of the GNU General Public License
+## along with this program; if not, write to the Free Software
+## Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
+
+"""This is a set of Python bindings for the libcups library from the
+CUPS project.
+
+>>> # Example of getting a list of printers
+>>> import cups
+>>> conn = cups.Connection ()
+>>> printers = conn.getPrinters ()
+>>> for printer in printers:
+...     print printer, printers[printer]["device-uri"]
+...
+HP ipp://192.168.1.1:631/printers/HP
+duplex ipp://192.168.1.1:631/printers/duplex
+HP-LaserJet-6MP ipp://192.168.1.1:631/printers/HP-LaserJet-6MP
+EPSON-Stylus-D78 usb://EPSON/Stylus%20D78
+"""
+
 from distutils.core import setup, Extension
 import sys
 VERSION="1.9.57"
@@ -8,6 +43,23 @@ if sys.platform == "darwin":
 
 setup (name="pycups",
        version=VERSION,
+       description="Python bindings for libcups",
+       long_description=__doc__,
+       author=["Tim Waugh <twaugh@redhat.com>",
+	       "Scott Balneaves <sbalneav@ltsp.org>",
+	       "Gowtham Narisipalli <narisipalli@gmail.com>",
+	       "Jiri Popelka <jpopelka@redhat.com>"],
+       url="http://cyberelk.net/tim/software/pycups/",
+       download_url="http://cyberelk.net/tim/data/pycups/",
+       classifiers=[
+		"Intended Audience :: Developers",
+		"Topic :: Software Development :: Libraries :: Python Modules",
+		"License :: OSI Approved :: GNU General Public License (GPL)",
+		"Development Status :: 5 - Production/Stable",
+		"Operating System :: Unix",
+		"Programming Language :: C",
+		],
+       license="GPLv2+",
        ext_modules=[Extension("cups",
                               ["cupsmodule.c", "cupsconnection.c",
                                "cupsppd.c", "cupsipp.c"],
